Do not display Unsafe warnings when the server is running